# web_fastapi

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  schemas.py  tools.py
app/: __init__.py
app/routers/: __init__.py  api_router.py  html_router.py
app/templates/: about.html  index.html
config/: env.py
resources/: tools.json
tests/: conftest.py  test_routers.py
